--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_for(@idea, remote: true) do |f| %>
+<%= form_for(@idea) do |f| %>
 <%= f.label :title %>
 <%= f.text_field :title %>
 <%= f.label :body %>
 <%= f.text_field :body %>
-<%= f.submit %>
+<%= f.submit :class => 'submit_button button' %>
 <% end %>
